src/components/v2/appDetails/k8Resource/nodeDetail/NodeDetailTabs/terminal/terminal.scss
/*
 * Copyright (c) 2024. Devtron Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.k8s-resource-view-container {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 119px);
}

.terminal-view-container {
    display: flex;
    flex-direction: column;
    height: calc(100vh - 155px);
}

.terminal-view-wrapper {
    position: relative;
    min-height: 600px;
    background: var(--terminal-bg);
    flex: 1;
}

.terminal-strip {
    z-index: 4;
}

.terminal-wrapper {
    display: flex;
    flex-direction: column;
    max-height: 100vh;
    background: var(--terminal-bg);
    overflow: hidden;
    flex: 1;
    position: relative;

    .terminal-component {
        overflow: hidden;
        flex: 1;

        &--fullscreen {
            position: fixed;
            top: 0;
            left: 0;
            height: 100vh;
            width: 100vw;
            z-index: 20;
            margin: 0;
        }

        & .zoom {
            position: absolute;
            top: 12px;
            right: 12px;
            transition: top 0.3s;
            padding: 6px;
            width: 32px;
            height: 32px;
            border-radius: 4px;
            box-shadow:
            0 0 4px 0 rgba(0, 10, 20, 0.5),
            0 0 4px 0 rgba(0, 10, 20, 0.5);
            background-color: #2c3354;
            opacity: 0.8;
            z-index: 21;

            &:hover {
                opacity: 1;
            }
        }
    }
}

.connection-status-strip {
    animation-name: connection-status-strip;
    animation-duration: 300ms;
    animation-timing-function: linear;
    animation-fill-mode: forwards;
    opacity: 0;
    height: 0px;
}

@keyframes connection-status-strip {
    0% {
        height: 0px;
        opacity: 0;
    }

    50% {
        opacity: 0.2;
    }

    100% {
        height: 22px;
        opacity: 1;
    }
}

.connection-status-strip.unmount {
    animation-name: connection-status-strip-unmount;
    animation-direction: reverse;
}

@keyframes connection-status-strip-unmount {
    0% {
        height: 22px;
        opacity: 1;
    }

    50% {
        opacity: 0.2;
    }

    100% {
        height: 0px;
        opacity: 0;
    }
}

.toggle-icon-dim {
    width: 24px;
    height: 16px;
}

